= Mechanize CHANGELOG

=== Unreleased

* New Features
  * Allow net-http-persistent instance to be named. #324, John Weir.

Bug fix
  * Ensure Download#save! defaults back to original filename if
    non is provided (#300)

=== 2.7.2

* Bug fix
  * API compatibility issues with Mechanize::CookieJar cookies has been
    addressed.  https://github.com/sparklemotion/http-cookie/issues/2 #326

=== 2.7.1

* Bug fix
  * Ensure images with no "src" attribute still return correct URLs. #317
  * Fixes Mechanize::Parser#extract_filename where an empty string filename
    in the response caused unhandled exception. #318

=== 2.7.0

* New Features
  * Mechanize::Agent#response_read will now raise a
    Mechanize::ResponseReadError instead of an EOFError and avoid losing
    requested content. #296.
  * Depend on http-cookie, add backwards compatible deprecations.
    #257 Akinori MUSHA.
  * Added `Download#save!` for overwriting existing files. #300 Sean Kim.

* Bug fix
  * Ensure page URLs with whitespace in them are escaped #313 @pacop.
  * Added a workaround for a bug of URI#+ that led to failure in resolving a relative path containing double slash like "/../http://.../". #304

=== 2.6.0

* New Features
  * Mechanize#start and Mechanize#shutdown (Thanks, Damian Janowski!)
  * Added Mechanize::Agent#allowed_error_codes for setting an Array
    of status codes which should not raise an error. #248 Laurence Rowe.
  * Added `File.save!` for overwriting existing files #219.
  * DirectorySaver::save_to now accepts an option to decode filename. #262
  * element(s)_with methods now accept a :search option for doing xpath/css
    selector searching. #287 Philippe Bourgau
  * Added httponly option for Mechanize::Cookie #242 by Paolo Perego.
  * Added Mechanize::XmlFile as a default pluggable parser for handling
    XML responses. #289

* Minor enhancements
  * Added Mechanize::Download#save_as as an alias to #save. #246